# farm-plugin-console-clear

./: Cargo.toml  README.md  farm_plugin_console_clear.win32-x64-msvc.node  options.d.ts  package.json  pnpm-lock.yaml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
playground/: farm.config.ts  package.json
playground/src/: index.tsx
scripts/: index.js
src/: lib.rs  remove_console.rs
